--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8081
+spring.aop.proxy-target-class=false
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=
+spring.datasource.url=
